--- a/homepage/config/widgets.yaml
+++ b/homepage/config/widgets.yaml
@@ -2,11 +2,6 @@
 # For configuration options and examples, please see:
 # https://gethomepage.dev/en/configs/widgets
 
-- resources:
-    cpu: true
-    memory: true
-    disk: /
-
-- search:
-    provider: google
-    target: _blank
+- greeting:
+    text_size: 2xl
+    text: Not Clickable
