Changed homepage title

--- a/homepage/config/settings.yaml
+++ b/homepage/config/settings.yaml
@@ -2,7 +2,7 @@
 # For configuration options and examples, please see:
 # https://gethomepage.dev/en/configs/settings
 
-title: Not Clickable
+title: Starbase 80
 theme: light
 color: gray
 hideVersion: true
