--- a/vaultwarden/compose.yml
+++ b/vaultwarden/compose.yml
@@ -5,6 +5,8 @@ services:
     entrypoint: "tail -f /dev/null"
     volumes:
       - data:/data
+      - letsencrypt:/etc/letsencrypt
+      - certbot:/var/www/certbot
     restart: always
 
   vaultwarden:
