--- a/vaultwarden/compose.yml
+++ b/vaultwarden/compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - data:/data
       - letsencrypt:/etc/letsencrypt
-      - certbot:/var/www/certbot
+      - letsencrypt_lib:/var/lib/letsencrypt
     restart: always
 
   vaultwarden:
