--- a/vaultwarden/compose.yml
+++ b/vaultwarden/compose.yml
@@ -4,9 +4,9 @@ services:
     container_name: vaultwarden_backup
     entrypoint: "tail -f /dev/null"
     volumes:
-      - data:/data
-      - letsencrypt:/etc/letsencrypt
-      - letsencrypt_lib:/var/lib/letsencrypt
+      - data:/data:ro
+      - letsencrypt:/etc/letsencrypt:ro
+      - letsencrypt_lib:/var/lib/letsencrypt:ro
     restart: always
 
   vaultwarden:
