--- a/homepage/config/services.yaml
+++ b/homepage/config/services.yaml
@@ -18,7 +18,7 @@
     - Gitea:
         icon: /icons/gitea.svg
         href: http://starbase-80:8100/
-        description: Code hosting and CI/CD
+        description: Code hosting
         container: gitea
 
     - Grafana:
@@ -85,6 +85,12 @@
         href: http://starbase-80:8060/
         description: Private wiki
         container: wikijs
+
+    - Woodpecker:
+        icon: drone
+        href: http://starbase-80:8101/
+        description: Continuous integration
+        container: gitea_woodpecker
 
 - Devices:
 
