--- a/homepage/config/services.yaml
+++ b/homepage/config/services.yaml
@@ -59,7 +59,7 @@
     - Minecraft:
         icon: /icons/minecraft.jpg
         href: http://192.168.1.57
-        description: Bedrock server
+        description: 192.168.1.3 (Bedrock)
         container: minecraft
 
     - Miniflux:
