--- a/homepage/config/services.yaml
+++ b/homepage/config/services.yaml
@@ -56,11 +56,11 @@
         description: Archive YouTube
         container: metube
 
-    - Minecraft:
-        icon: /icons/minecraft.jpg
-        href: http://192.168.1.57
-        description: 192.168.1.3 (Bedrock)
-        container: minecraft
+#    - Minecraft:
+#        icon: /icons/minecraft.jpg
+#        href: http://192.168.1.57
+#        description: 192.168.1.3 (Bedrock)
+#        container: minecraft
 
     - Miniflux:
         icon: /icons/miniflux.jpg
