--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -16,7 +16,7 @@ services:
     image: nginx:1.23.3
     container_name: switchboard
     volumes:
-      - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./sites:/etc/nginx/conf.d
       - logs:/var/log/nginx
       - letsencrypt:/etc/letsencrypt
     ports:
