--- a/nginx/sites/mastodon.conf
+++ b/nginx/sites/mastodon.conf
@@ -1,7 +1,7 @@
-map $http_upgrade $connection_upgrade {
-  default upgrade;
-  '' close;
-}
+# map $http_upgrade $connection_upgrade {
+#   default upgrade;
+#   '' close;
+# }
 
 upstream mastodon_backend {
   server host.docker.internal:8012 fail_timeout=0;
@@ -11,7 +11,7 @@ upstream mastodon_streaming {
   server host.docker.internal:8013 fail_timeout=0;
 }
 
-proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=CACHE:10m inactive=7d max_size=1g;
+#proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=CACHE:10m inactive=7d max_size=1g;
 
 server {
   listen 80;
@@ -22,7 +22,7 @@ server {
   access_log /var/log/nginx/notclickable.social.access.logs;
   error_log /var/log/nginx/notclickable.social.error.logs;
 
-  location ~ /.well-known/acme-challenge {
+  location ^~ /.well-known/acme-challenge/ {
     allow all;
     root /var/www/certbot;
   }
@@ -34,302 +34,291 @@ server {
     proxy_set_header Host $http_host;
     proxy_set_header X-NginX-Proxy true;
 
-    return 301 https://$host$request_uri;
-  }
-}
-
-server {
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
-  server_name notclickable.social;
-
-  access_log /var/log/nginx/notclickable.social.access.logs;
-  error_log /var/log/nginx/notclickable.social.error.logs;
-
-  ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
-  ssl_prefer_server_ciphers on;
-  ssl_session_cache shared:SSL:10m;
-  ssl_session_tickets off;
-
-  ssl_certificate /etc/letsencrypt/live/notclickable.social/fullchain.pem; # managed by Certbot
-  ssl_certificate_key /etc/letsencrypt/live/notclickable.social/privkey.pem; # managed by Certbot
-
-  keepalive_timeout 70;
-  sendfile on;
-  client_max_body_size 80m;
-
-  root /home/mastodon/live/public;
-
-  gzip on;
-  gzip_disable "msie6";
-  gzip_vary on;
-  gzip_proxied any;
-  gzip_comp_level 6;
-  gzip_buffers 16 8k;
-  gzip_http_version 1.1;
-  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml image/x-icon;
-
-  location / {
-    try_files $uri @proxy;
-  }
-
-  location = /sw.js {
-    add_header Cache-Control "public, max-age=604800, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/assets/ {
-    add_header Cache-Control "public, max-age=2419200, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/avatars/ {
-    add_header Cache-Control "public, max-age=2419200, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/emoji/ {
-    add_header Cache-Control "public, max-age=2419200, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/headers/ {
-    add_header Cache-Control "public, max-age=2419200, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/packs/ {
-    add_header Cache-Control "public, max-age=2419200, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/shortcuts/ {
-    add_header Cache-Control "public, max-age=2419200, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/sounds/ {
-    add_header Cache-Control "public, max-age=2419200, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/system/ {
-    add_header Cache-Control "public, max-age=2419200, immutable";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ^~ /api/v1/streaming {
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Proxy "";
-
-    proxy_pass http://mastodon_streaming;
-    proxy_buffering off;
-    proxy_redirect off;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
-
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-
-    tcp_nodelay on;
-  }
-
-  location @proxy {
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Proxy "";
-    proxy_pass_header Server;
-
     proxy_pass http://mastodon_backend;
-    proxy_buffering on;
-    proxy_redirect off;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
-
-    proxy_cache CACHE;
-    proxy_cache_valid 200 7d;
-    proxy_cache_valid 410 24h;
-    proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
-    add_header X-Cached $upstream_cache_status;
-
-    tcp_nodelay on;
-  }
-
-  error_page 404 500 501 502 503 504 /500.html;
-
-}
-
-server {
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
-  server_name www.notclickable.social;
-
-  access_log /var/log/nginx/notclickable.social.access.logs;
-  error_log /var/log/nginx/notclickable.social.error.logs;
-
-  ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
-  ssl_prefer_server_ciphers on;
-  ssl_session_cache shared:SSL:10m;
-  ssl_session_tickets off;
-
-  ssl_certificate /etc/letsencrypt/live/www.notclickable.social/fullchain.pem; # managed by Certbot
-  ssl_certificate_key /etc/letsencrypt/live/www.notclickable.social/privkey.pem; # managed by Certbot
-
-  keepalive_timeout 70;
-  sendfile on;
-  client_max_body_size 80m;
-
-  root /home/mastodon/live/public;
-
-  gzip on;
-  gzip_disable "msie6";
-  gzip_vary on;
-  gzip_proxied any;
-  gzip_comp_level 6;
-  gzip_buffers 16 8k;
-  gzip_http_version 1.1;
-  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml image/x-icon;
-
-  location / {
-    try_files $uri @proxy;
-  }
-
-  location = /sw.js {
-    add_header Cache-Control "public, max-age=604800, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/assets/ {
-    add_header Cache-Control "public, max-age=2419200, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/avatars/ {
-    add_header Cache-Control "public, max-age=2419200, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/emoji/ {
-    add_header Cache-Control "public, max-age=2419200, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/headers/ {
-    add_header Cache-Control "public, max-age=2419200, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/packs/ {
-    add_header Cache-Control "public, max-age=2419200, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/shortcuts/ {
-    add_header Cache-Control "public, max-age=2419200, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/sounds/ {
-    add_header Cache-Control "public, max-age=2419200, must-revalidate";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ~ ^/system/ {
-    add_header Cache-Control "public, max-age=2419200, immutable";
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-    try_files $uri @proxy;
-  }
-
-  location ^~ /api/v1/streaming {
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Proxy "";
-
-    proxy_pass http://mastodon_streaming;
-    proxy_buffering off;
-    proxy_redirect off;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
-
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-
-    tcp_nodelay on;
-  }
-
-  location @proxy {
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Proxy "";
-    proxy_pass_header Server;
-
-    proxy_pass http://mastodon_backend;
-    proxy_buffering on;
-    proxy_redirect off;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
-
-    proxy_cache CACHE;
-    proxy_cache_valid 200 7d;
-    proxy_cache_valid 410 24h;
-    proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
-    add_header X-Cached $upstream_cache_status;
-
-    tcp_nodelay on;
-  }
-
-  error_page 404 500 501 502 503 504 /500.html;
-
-}
-
-# Grafana
-
-server {
-  listen 8070 default_server;
-  listen [::]:8070 default_server;
-
-  root /var/www/html;
-  index index.html index.htm index.nginx-debian.html;
-
-  server_name _;
-
-  location / {
-    try_files $uri $uri/ =404;
-  }
-
-  location /status {
-    stub_status;
-    allow 10.10.10.20;
-    deny all;
+    #return 301 https://$host$request_uri;
   }
 }
+
+# server {
+#   listen 443 ssl http2;
+#   listen [::]:443 ssl http2;
+#   server_name notclickable.social;
+
+#   access_log /var/log/nginx/notclickable.social.access.logs;
+#   error_log /var/log/nginx/notclickable.social.error.logs;
+
+#   ssl_protocols TLSv1.2 TLSv1.3;
+#   ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
+#   ssl_prefer_server_ciphers on;
+#   ssl_session_cache shared:SSL:10m;
+#   ssl_session_tickets off;
+
+#   ssl_certificate /etc/letsencrypt/live/notclickable.social-0001/fullchain.pem; # managed by Certbot
+#   ssl_certificate_key /etc/letsencrypt/live/notclickable.social-0001/privkey.pem; # managed by Certbot
+
+#   keepalive_timeout 70;
+#   sendfile on;
+#   client_max_body_size 80m;
+
+#   root /home/mastodon/live/public;
+
+#   gzip on;
+#   gzip_disable "msie6";
+#   gzip_vary on;
+#   gzip_proxied any;
+#   gzip_comp_level 6;
+#   gzip_buffers 16 8k;
+#   gzip_http_version 1.1;
+#   gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml image/x-icon;
+
+#   location / {
+#     try_files $uri @proxy;
+#   }
+
+#   location ^~ /.well-known/acme-challenge/ {
+#     allow all;
+#     root /var/www/certbot;
+#   }
+
+#   location = /sw.js {
+#     add_header Cache-Control "public, max-age=604800, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/assets/ {
+#     add_header Cache-Control "public, max-age=2419200, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/avatars/ {
+#     add_header Cache-Control "public, max-age=2419200, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/emoji/ {
+#     add_header Cache-Control "public, max-age=2419200, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/headers/ {
+#     add_header Cache-Control "public, max-age=2419200, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/packs/ {
+#     add_header Cache-Control "public, max-age=2419200, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/shortcuts/ {
+#     add_header Cache-Control "public, max-age=2419200, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/sounds/ {
+#     add_header Cache-Control "public, max-age=2419200, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/system/ {
+#     add_header Cache-Control "public, max-age=2419200, immutable";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ^~ /api/v1/streaming {
+#     proxy_set_header Host $host;
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_set_header X-Forwarded-Proto $scheme;
+#     proxy_set_header Proxy "";
+
+#     proxy_pass http://mastodon_streaming;
+#     proxy_buffering off;
+#     proxy_redirect off;
+#     proxy_http_version 1.1;
+#     proxy_set_header Upgrade $http_upgrade;
+#     proxy_set_header Connection $connection_upgrade;
+
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+
+#     tcp_nodelay on;
+#   }
+
+#   location @proxy {
+#     proxy_set_header Host $host;
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_set_header X-Forwarded-Proto $scheme;
+#     proxy_set_header Proxy "";
+#     proxy_pass_header Server;
+
+#     proxy_pass http://mastodon_backend;
+#     proxy_buffering on;
+#     proxy_redirect off;
+#     proxy_http_version 1.1;
+#     proxy_set_header Upgrade $http_upgrade;
+#     proxy_set_header Connection $connection_upgrade;
+
+#     proxy_cache CACHE;
+#     proxy_cache_valid 200 7d;
+#     proxy_cache_valid 410 24h;
+#     proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+#     add_header X-Cached $upstream_cache_status;
+
+#     tcp_nodelay on;
+#   }
+
+#   error_page 404 500 501 502 503 504 /500.html;
+
+# }
+
+# server {
+#   listen 443 ssl http2;
+#   listen [::]:443 ssl http2;
+#   server_name www.notclickable.social;
+
+#   access_log /var/log/nginx/notclickable.social.access.logs;
+#   error_log /var/log/nginx/notclickable.social.error.logs;
+
+#   ssl_protocols TLSv1.2 TLSv1.3;
+#   ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
+#   ssl_prefer_server_ciphers on;
+#   ssl_session_cache shared:SSL:10m;
+#   ssl_session_tickets off;
+
+#   ssl_certificate /etc/letsencrypt/live/www.notclickable.social/fullchain.pem; # managed by Certbot
+#   ssl_certificate_key /etc/letsencrypt/live/www.notclickable.social/privkey.pem; # managed by Certbot
+
+#   keepalive_timeout 70;
+#   sendfile on;
+#   client_max_body_size 80m;
+
+#   root /home/mastodon/live/public;
+
+#   gzip on;
+#   gzip_disable "msie6";
+#   gzip_vary on;
+#   gzip_proxied any;
+#   gzip_comp_level 6;
+#   gzip_buffers 16 8k;
+#   gzip_http_version 1.1;
+#   gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml image/x-icon;
+
+#   location / {
+#     try_files $uri @proxy;
+#   }
+
+#   location ^~ /.well-known/acme-challenge/ {
+#     allow all;
+#     root /var/www/certbot;
+#   }
+
+#   location = /sw.js {
+#     add_header Cache-Control "public, max-age=604800, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/assets/ {
+#     add_header Cache-Control "public, max-age=2419200, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/avatars/ {
+#     add_header Cache-Control "public, max-age=2419200, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/emoji/ {
+#     add_header Cache-Control "public, max-age=2419200, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/headers/ {
+#     add_header Cache-Control "public, max-age=2419200, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/packs/ {
+#     add_header Cache-Control "public, max-age=2419200, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/shortcuts/ {
+#     add_header Cache-Control "public, max-age=2419200, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/sounds/ {
+#     add_header Cache-Control "public, max-age=2419200, must-revalidate";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ~ ^/system/ {
+#     add_header Cache-Control "public, max-age=2419200, immutable";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+#     try_files $uri @proxy;
+#   }
+
+#   location ^~ /api/v1/streaming {
+#     proxy_set_header Host $host;
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_set_header X-Forwarded-Proto $scheme;
+#     proxy_set_header Proxy "";
+
+#     proxy_pass http://mastodon_streaming;
+#     proxy_buffering off;
+#     proxy_redirect off;
+#     proxy_http_version 1.1;
+#     proxy_set_header Upgrade $http_upgrade;
+#     proxy_set_header Connection $connection_upgrade;
+
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+
+#     tcp_nodelay on;
+#   }
+
+#   location @proxy {
+#     proxy_set_header Host $host;
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_set_header X-Forwarded-Proto $scheme;
+#     proxy_set_header Proxy "";
+#     proxy_pass_header Server;
+
+#     proxy_pass http://mastodon_backend;
+#     proxy_buffering on;
+#     proxy_redirect off;
+#     proxy_http_version 1.1;
+#     proxy_set_header Upgrade $http_upgrade;
+#     proxy_set_header Connection $connection_upgrade;
+
+#     proxy_cache CACHE;
+#     proxy_cache_valid 200 7d;
+#     proxy_cache_valid 410 24h;
+#     proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+#     add_header X-Cached $upstream_cache_status;
+
+#     tcp_nodelay on;
+#   }
+
+#   error_page 404 500 501 502 503 504 /500.html;
+
+# }
