Real Mastodon fix

--- a/nginx/sites/mastodon.conf
+++ b/nginx/sites/mastodon.conf
@@ -194,8 +194,8 @@ server {
   ssl_session_cache shared:SSL:10m;
   ssl_session_tickets off;
 
-  ssl_certificate /etc/letsencrypt/live/www.notclickable.social/fullchain.pem; # managed by Certbot
-  ssl_certificate_key /etc/letsencrypt/live/www.notclickable.social/privkey.pem; # managed by Certbot
+  ssl_certificate /etc/letsencrypt/live/notclickable.social/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/notclickable.social/privkey.pem; # managed by Certbot
 
   keepalive_timeout 70;
   sendfile on;
