Configured vaultwarden (maybe)

--- a/nginx/sites/vaultwarden.conf
+++ b/nginx/sites/vaultwarden.conf
@@ -42,15 +42,21 @@ server {
   ssl_certificate /etc/letsencrypt/live/vaultwarden.notclickable.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/vaultwarden.notclickable.com/privkey.pem;
 
+  include /etc/nginx/snippets/authelia-location.conf;
+
   location ^~ /.well-known/acme-challenge {
     allow all;
     root /var/www/certbot;
   }
 
   location / {
-    proxy_pass http://vaultwarden_backend;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_redirect off;
+
+    include /etc/nginx/snippets/proxy.conf;
+    include /etc/nginx/snippets/authelia-authrequest.conf;
+
+    proxy_pass http://vaultwarden_backend;
   }
 }
