Authelia technically works

--- a/nginx/sites/authelia.conf
+++ b/nginx/sites/authelia.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name auth.*;
 
-    set $upstream http://authelia:8000;
+    set $upstream http://10.10.10.70:9091;
 
     location / {
         include /etc/nginx/snippets/proxy.conf;
