--- a/nginx/snippets/authelia-location.conf
+++ b/nginx/snippets/authelia-location.conf
@@ -1,4 +1,4 @@
-set $upstream_authelia http://host.docker.internal:8000/api/verify;
+set $upstream_authelia http://10.10.10.70:9091/api/verify;
 
 ## Virtual endpoint created by nginx to forward auth requests.
 location /authelia {
