--- a/nginx/sites/vaultwarden.conf
+++ b/nginx/sites/vaultwarden.conf
@@ -6,8 +6,8 @@ server {
   listen 80;
   server_name vaultwarden.notclickable.com;
 
-  access_log /var/log/nginx/vaultwarden.notclickable.com.access.logs;
-  error_log /var/log/nginx/vaultwarden.notclickable.com.error.logs;
+  #access_log /var/log/nginx/vaultwarden.notclickable.com.access.logs;
+  #error_log /var/log/nginx/vaultwarden.notclickable.com.error.logs;
 
   location ^~ /.well-known/acme-challenge {
     allow all;
@@ -30,8 +30,8 @@ server {
   listen [::]:443 ssl http2;
   server_name vaultwarden.notclickable.com;
 
-  access_log /var/log/nginx/vaultwarden.notclickable.com.access.logs;
-  error_log /var/log/nginx/vaultwarden.notclickable.com.error.logs;
+  #access_log /var/log/nginx/vaultwarden.notclickable.com.access.logs;
+  #error_log /var/log/nginx/vaultwarden.notclickable.com.error.logs;
 
   ssl_protocols TLSv1.2 TLSv1.3;
   ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
@@ -52,7 +52,6 @@ server {
   location / {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
-    proxy_redirect off;
 
     include /etc/nginx/snippets/proxy.conf;
     include /etc/nginx/snippets/authelia-authrequest.conf;
