Authelia is working for VaultWarden

--- a/nginx/sites/authelia.conf
+++ b/nginx/sites/authelia.conf
@@ -1,8 +1,34 @@
 server {
     listen 80;
+    server_name auth.notclickable.com;
+
+    location ^~ /.well-known/acme-challenge/ {
+        allow all;
+        root /var/www/certbot;
+    }
+
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
     server_name auth.*;
 
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
+  ssl_prefer_server_ciphers on;
+  ssl_session_cache shared:SSL:10m;
+  ssl_session_tickets off;
+
+  ssl_certificate /etc/letsencrypt/live/auth.notclickable.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/auth.notclickable.com/privkey.pem;
+
     set $upstream http://10.10.10.70:9091;
+
+    location ^~ /.well-known/acme-challenge/ {
+        allow all;
+        root /var/www/certbot;
+    }
 
     location / {
         include /etc/nginx/snippets/proxy.conf;
