--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -69,15 +69,31 @@ services:
         aliases:
           - nginx
 
-  # Get initial certificates
-  # letsencrypt:
+  # Get one certificate
+  # letsencrypt_one:
   #     image: certbot/certbot:v2.4.0
-  #     container_name: switchboard_letsencrypt
+  #     container_name: switchboard_letsencrypt_one
+  #     entrypoint: ""
+  #     command: >
+  #       sh -c "certbot certonly --reinstall -n -v -d auth.notclickable.com --cert-name auth.notclickable.com  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+  #     depends_on:
+  #         - nginx
+  #     volumes:
+  #         - letsencrypt:/etc/letsencrypt
+  #         - certbot:/var/www/certbot
+  #     environment:
+  #         - TERM=xterm
+
+  # Get initial certificates
+  # letsencrypt_initial:
+  #     image: certbot/certbot:v2.4.0
+  #     container_name: switchboard_letsencrypt_initial
   #     entrypoint: ""
   #     command: >
   #       sh -c "certbot certonly --reinstall -n -v -d notclickable.social -d www.notclickable.social --cert-name notclickable.social  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com &&
   #       certbot certonly --reinstall -v -n -d notclickable.com -d www.notclickable.com --cert-name notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com &&
-  #       certbot certonly --reinstall -v -n -d vaultwarden.notclickable.com --cert-name vaultwarden.notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+  #       certbot certonly --reinstall -v -n -d vaultwarden.notclickable.com --cert-name vaultwarden.notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com &&
+  #       certbot certonly --reinstall -n -v -d auth.notclickable.com --cert-name auth.notclickable.com  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
   #     depends_on:
   #         - nginx
   #     volumes:
