Fixed access logs Added readme for Authelia two factor

--- a/nginx/sites/authelia.conf
+++ b/nginx/sites/authelia.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name auth.notclickable.com;
 
+  access_log /var/log/nginx/auth.notclickable.com.access.logs;
+  error_log /var/log/nginx/auth.notclickable.com.error.logs;
+
     location ^~ /.well-known/acme-challenge/ {
         allow all;
         root /var/www/certbot;
@@ -13,6 +16,9 @@ server {
 server {
     listen 443 ssl http2;
     server_name auth.*;
+
+  access_log /var/log/nginx/auth.notclickable.com.access.logs;
+  error_log /var/log/nginx/auth.notclickable.com.error.logs;
 
   ssl_protocols TLSv1.2 TLSv1.3;
   ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
