--- a/nginx/snippets/authelia-authrequest.conf
+++ b/nginx/snippets/authelia-authrequest.conf
@@ -22,4 +22,4 @@ proxy_set_header Remote-Name $name;
 proxy_set_header Remote-Email $email;
 
 ## If the subreqest returns 200 pass to the backend, if the subrequest returns 401 redirect to the portal.
-error_page 401 =302 http://auth.notclickable.com/?rd=$target_url;
+error_page 401 =302 http://auth.starbase80.dev/?rd=$target_url;
