--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -75,7 +75,7 @@ services:
   #     container_name: switchboard_letsencrypt_one
   #     entrypoint: ""
   #     command: >
-  #       sh -c "certbot certonly --reinstall -n -v -d archivebox.starbase80.dev --cert-name archivebox.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+  #       sh -c "certbot certonly --reinstall -n -v -d rohertwins.starbase80.dev --cert-name rohertwins.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
   #     depends_on:
   #         - nginx
   #     volumes:
