--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -70,19 +70,19 @@ services:
           - nginx
 
   # Get one certificate
-  # letsencrypt_one:
-  #     image: certbot/certbot:v2.4.0
-  #     container_name: switchboard_letsencrypt_one
-  #     entrypoint: ""
-  #     command: >
-  #       sh -c "certbot certonly --reinstall -n -v -d rohertwins.starbase80.dev --cert-name rohertwins.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
-  #     depends_on:
-  #         - nginx
-  #     volumes:
-  #         - letsencrypt:/etc/letsencrypt
-  #         - certbot:/var/www/certbot
-  #     environment:
-  #         - TERM=xterm
+  letsencrypt_one:
+      image: certbot/certbot:v2.4.0
+      container_name: switchboard_letsencrypt_one
+      entrypoint: ""
+      command: >
+        sh -c "certbot certonly --reinstall -n -v -d git.starbase80.dev --cert-name git.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+      depends_on:
+          - nginx
+      volumes:
+          - letsencrypt:/etc/letsencrypt
+          - certbot:/var/www/certbot
+      environment:
+          - TERM=xterm
 
   # Get initial certificates
   # letsencrypt_initial:
