--- a/rohertwins/compose.yml
+++ b/rohertwins/compose.yml
@@ -1,7 +1,7 @@
 services:
   backup:
     image: alpine:3.17.2
-    container_name: roher_twins_backup
+    container_name: rohertwins_backup
     entrypoint: "tail -f /dev/null"
     restart: always
     volumes:
@@ -10,7 +10,7 @@ services:
 
   ghost:
     image: ghost:5.42-alpine
-    container_name: roher_twins
+    container_name: rohertwins
     restart: always
     depends_on:
       - db
@@ -22,7 +22,7 @@ services:
 
   db:
     image: mysql:8.0
-    container_name: roher_twins_db
+    container_name: rohertwins_db
     restart: always
     env_file: env.db
     volumes:
