--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -75,7 +75,7 @@ services:
       container_name: switchboard_letsencrypt_one
       entrypoint: ""
       command: >
-        sh -c "certbot certonly --reinstall -n -v -d git.starbase80.dev --cert-name git.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+        sh -c "certbot certonly --reinstall -n -v -d n8n.starbase80.dev --cert-name n8n.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
       depends_on:
           - nginx
       volumes:
