--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -70,30 +70,12 @@ services:
           - nginx
 
   # Get one certificate
-  letsencrypt_one:
-      image: certbot/certbot:v2.4.0
-      container_name: switchboard_letsencrypt_one
-      entrypoint: ""
-      command: >
-        sh -c "certbot certonly --reinstall -n -v -d n8n.starbase80.dev --cert-name n8n.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
-      depends_on:
-          - nginx
-      volumes:
-          - letsencrypt:/etc/letsencrypt
-          - certbot:/var/www/certbot
-      environment:
-          - TERM=xterm
-
-  # Get initial certificates
-  # letsencrypt_initial:
+  # letsencrypt_one:
   #     image: certbot/certbot:v2.4.0
-  #     container_name: switchboard_letsencrypt_initial
+  #     container_name: switchboard_letsencrypt_one
   #     entrypoint: ""
   #     command: >
-  #       sh -c "certbot certonly --reinstall -n -v -d notclickable.social -d www.notclickable.social --cert-name notclickable.social  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com &&
-  #       certbot certonly --reinstall -v -n -d starbase80.dev -d www.starbase80.dev --cert-name starbase80.dev --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com &&
-  #       certbot certonly --reinstall -v -n -d vaultwarden.starbase80.dev --cert-name vaultwarden.starbase80.dev --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com &&
-  #       certbot certonly --reinstall -n -v -d auth.starbase80.dev --cert-name auth.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+  #       sh -c "certbot certonly --reinstall -n -v -d wiki.starbase80.dev --cert-name wiki.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
   #     depends_on:
   #         - nginx
   #     volumes:
@@ -103,19 +85,19 @@ services:
   #         - TERM=xterm
 
   # Renew certificates
-  # letsencrypt:
-  #     image: certbot/certbot:v2.4.0
-  #     container_name: switchboard_letsencrypt
-  #     entrypoint: ""
-  #     command: >
-  #       sh -c "certbot renew --keep-until-expiring -n -v"
-  #     depends_on:
-  #         - nginx
-  #     volumes:
-  #         - letsencrypt:/etc/letsencrypt
-  #         - certbot:/var/www/certbot
-  #     environment:
-  #         - TERM=xterm
+  letsencrypt:
+      image: certbot/certbot:v2.4.0
+      container_name: switchboard_letsencrypt
+      entrypoint: ""
+      command: >
+        sh -c "certbot renew --keep-until-expiring -n -v"
+      depends_on:
+          - nginx
+      volumes:
+          - letsencrypt:/etc/letsencrypt
+          - certbot:/var/www/certbot
+      environment:
+          - TERM=xterm
 
   nginx-prometheus-exporter:
     image: nginx/nginx-prometheus-exporter:0.11
